fixed some property names in order modules
Sales invoice is inherited by invoice abstratc class